2007-01-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/Makefile.am:
	* glom/glom.glade:
	* glom/dialog_new_database.cc:
	* glom/dialog_new_database.h: Removed this class and dialog.
	* glom/utility_widgets/filechooserdialog.cc:
	* glom/utility_widgets/filechooserdialog.h: Add widgets from the 
	DialogNewDatabase dialog (asking for the title, and whether to self-host).
	* glom/application.cc:
	* glom/application.h: Add new m_ui_save_extra member variables for getting the 
	result of the extended save dialog while still using the Bakery file save API.
	ui_file_select_save(): Set and get the new member variables.
	on_document_load(): Use the new member variables (with values previously set by the 
	extended save dialog) instead of showing a new dialog to get the information.

	This removes one dialog, making new file creation simpler.

2007-01-10  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS.

2006-12-28  Murray Cumming  <murrayc@murrayc.com>

	* glom/utility_widgets/filechooserdialog.cc:
	* glom/utility_widgets/filechooserdialog.h: Add a derived Gtk::FileChooserDialog, 
	which can show our extra widgets. At the moment it can just show an extra text 
	message.
	* glom/application.cc:
	* glom/application.h: Override Bakery::App_WithDoc::ui_file_select_save(), so 
	we can use our custom file chooser dialog, using member variables to set the title 
	and extra message if necessary.
	on_document_load(): Set the member variables so that we show the message about 
	saving an example file in the file chooser dialog, instead of in a separate dialog.
	This removes one of the many dialogs. 

2006-12-27  Murray Cumming  <murrayc@murrayc.com>

        * glom/libglom/Makefile.am:
        * glom/python_embed/python_module/Makefile.am: Fix the cygwin (win32) build.
        Bug #338844 from Yselkowitz.

2006-12-21   Murray Cumming  <murrayc@murrayc.com>

	* glom/translation/window_translations.cc: